# semver_cli

./: Cargo.toml  readme.md
src/: main.rs
